--- a/src/sass/_settings.media-queries.scss
+++ b/src/sass/_settings.media-queries.scss
@@ -1,25 +1,3 @@
-// We use these functions to define ranges for various things, like media queries. 
-@function lower-bound($range){
-  @if length($range) <= 0 {
-    @return 0;
-  }
-  @return nth($range,1);
-}
-
-@function upper-bound($range) {
-  @if length($range) < 2 {
-    @return 999999999999;
-  }
-  @return nth($range, 2);
-}
-
-
-$small-range: (0em, 40em) !default;
-$medium-range: (40.063em, 64em) !default;
-$large-range: (64.063em, 90em) !default;
-$xlarge-range: (90.063em, 120em) !default;
-$xxlarge-range: (120.063em, 99999999em) !default;
-
 $screen: "only screen" !default;
 
 $landscape: "#{$screen} and (orientation: landscape)" !default;
@@ -27,22 +5,22 @@ $portrait: "#{$screen} and (orientation: portrait)" !default;
 $four-thirds: "#{$screen} and (max-aspect-ratio: 4/3)" !default;
 
 $small-up: $screen !default;
-$small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})" !default;
-$small-only-portrait: "#{$portrait} and (max-width: #{upper-bound($small-range)})" !default;
+$small-only: "#{$screen} and (max-width: 40em)" !default;
+$small-only-portrait: "#{$portrait} and (max-width: 40em)" !default;
 
-$medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})" !default;
-$medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})" !default;
-$medium-down: "#{$screen} and (max-width: #{upper-bound($medium-range)})" !default;
-$medium-down-portrait: "#{$portrait} and (max-width: #{upper-bound($medium-range)})" !default;
+$medium-up: "#{$screen} and (min-width: 40.063em)" !default;
+$medium-only: "#{$screen} and (min-width: 40.063em) and (max-width: 64em)" !default;
+$medium-down: "#{$screen} and (max-width: 63em)" !default;
+$medium-down-portrait: "#{$portrait} and (max-width: 64em)" !default;
 
-$large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})" !default;
-$large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})" !default;
+$large-up: "#{$screen} and (min-width: 64.063em)" !default;
+$large-only: "#{$screen} and (min-width: 64.063em) and (max-width: 90em)" !default;
 
-$xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})" !default;
-$xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})" !default;
+$xlarge-up: "#{$screen} and (min-width: 90.063em)" !default;
+$xlarge-only: "#{$screen} and (min-width: 90.063em) and (max-width: 120em)" !default;
 
-$xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})" !default;
-$xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})" !default;
+$xxlarge-up: "#{$screen} and (min-width: 120.063em)" !default;
+$xxlarge-only: "#{$screen} and (min-width: 120.063em) and (max-width: 99999999em)" !default;
 
 /*
 Material Design Adaptive Breakpoints
