Kept Google ranges

--- a/src/sass/_settings.media-queries.scss
+++ b/src/sass/_settings.media-queries.scss
@@ -27,7 +27,7 @@ Material Design Adaptive Breakpoints
 
 http://www.google.com/design/spec/layout/adaptive-ui.html#adaptive-ui-breakpoints
 
-These were adapted to em values for our use, plus we have added a few simple ranges between and above those listed by Google
+These were adapted to em values for our use.
 
 Also, the below variables are mostly to be used in specific cases for positioning elements, etc., not yet basing the entire grid/visibility system from this
 */
