--- a/src/sass/_tools.grid.scss
+++ b/src/sass/_tools.grid.scss
@@ -6,7 +6,9 @@
 // $colNumber - Found in settings file
 // $totalColumns - Found in settings file
 @function grid-calc($colNumber, $totalColumns) {
-  @return percentage(($colNumber / $totalColumns));
+  $result: percentage(($colNumber / $totalColumns));
+  @if $result == 0% { $result: 0; }
+  @return $result;
 }
 
 //
@@ -98,10 +100,6 @@
   @else if $collapse == false {
     padding-left: $column-gutter / 2;
     padding-right: $column-gutter / 2;
-    @media #{$small-only} {
-      padding-left: $column-gutter / 4;
-      padding-right: $column-gutter / 4;
-    }
   }
 
   // If a column number is given, calculate width
