--- a/src/sass/_settings.typography.scss
+++ b/src/sass/_settings.typography.scss
@@ -9,7 +9,11 @@ $paragraph-font-size: 1em;
 $body-font-family-sans: sans-serif;
 $body-font-family-serif: serif;
 $body-font-weight: 400;
+$body-font-weight-bold: 700;
 $body-font-style: normal;
+
+$heading-font-family: sans-serif;
+$heading-font-weight: 700;
 
 // We use these to control text direction settings
 $text-direction: ltr;
