--- a/src/sass/_elements.typography.scss
+++ b/src/sass/_elements.typography.scss
@@ -1,13 +1,16 @@
-h1, h2, h3, h4, h5, h6, strong, dt {
-  font-weight: 700;
-}
-
 h1, h2, h3, h4, h5, h6 {
   margin: 0.5em 0;
+  font-family: $heading-font-family;
+  font-weight: $heading-font-weight;
+  text-transform: uppercase;
 }
 
 p {
   margin: 0 0 0.5em;
+}
+
+strong, dt {
+  font-weight: $body-font-weight-bold;
 }
 
 h1 {
