--- a/src/sass/_settings.typography.scss
+++ b/src/sass/_settings.typography.scss
@@ -6,8 +6,7 @@ $base-line-height: 1.4;
 $paragraph-font-size: 1em;
 
 // Optional default font family stuff
-$body-font-family-sans: sans-serif;
-$body-font-family-serif: serif;
+$body-font-family: sans-serif;
 $body-font-weight: 400;
 $body-font-weight-bold: 700;
 $body-font-style: normal;
